fix floating cta z-index

--- a/src/core-ui/ModalSecondary/ModalSecondary.module.scss
+++ b/src/core-ui/ModalSecondary/ModalSecondary.module.scss
@@ -19,7 +19,7 @@
   background-color: var(--color-white);
   border-radius: 0.3rem;
   border-bottom: 0.5rem solid var(--color-primary);
-  z-index: 9999;
+  z-index: 9999999;
   overflow: hidden;
   @media (max-width: 700px) {
     min-width: 90%;
